@@ -1,3 +1,8 @@
+2004-01-23  Daniel Jacobowitz  <drow@mvista.com>
+
+	* gdb.mi/mi-var-child.exp: Update copyright year.  Move new test
+	after -var-update.
+
 2004-01-23  David Carlton  <carlton@kealia.com>
 
 	* gdb.cp/namespace.cc (C::ensureRefs): New.
